...
                        onPressed: _stopGeneration,
                        child: const Text('Stop Generation'),
                      ),
                    ] else ...[
                      ShadButton(
                        onPressed: _allocateObjects,
                        child: const Text('Allocate Objects'),
                      ),
                    ],
                    const Padding(
                      padding: EdgeInsets.all(defaultSpacing),
                    ),
                    ShadInputFormField(
...
                    ),
                    const Padding(
                      padding: EdgeInsets.all(defaultSpacing),
                    ),
                    ShadButton.destructive(
                      onPressed: _clearObjects,
                      child: const Text('Clear Allocated Objects'),
                    ),
                  ],
                ),
              ),
              const Padding(
                padding: EdgeInsets.all(defaultSpacing),
...
