...
  ),
  network(
    name: 'Network',
    path: '/network',
    iconAsset: 'assets/icons/network.png',
  ),
  memory(name: 'Memory', path: '/memory', iconAsset: 'assets/icons/memory.png'),
  cpuProfiler(
    name: 'CPU Profiler',
    path: '/cpu-profiler',
    iconAsset: 'assets/icons/cpu_profiler.png',
  ),
  debugger(
...
